add more shift combos

--- a/config/includes/combos.dtsi
+++ b/config/includes/combos.dtsi
@@ -2,8 +2,8 @@
 #undef COMBO_HOOK
 #define COMBO_HOOK require-prior-idle-ms = <125>;
 
-#define COMBO_TERM_FAST 60
-#define COMBO_TERM_SLOW 60
+#define COMBO_TERM_FAST 40
+#define COMBO_TERM_SLOW 40
 
 // make homerow combos tap-only (so HRMs can be chorded instantaneously)
 #define HRC_ESC    &hml         LA(LGUI) ESC
@@ -188,7 +188,7 @@ ZMK_COMBO(lbkt,   &kp LBKT,       LM2 LB3,     ALL, COMBO_TERM_FAST)
 // ********************************************************
 // left diagonal ring + pinky fingers
 // ********************************************************
-// ZMK_COMBO(esc,   HRC_ESC,       LT3 LM4,     ALL, COMBO_TERM_FAST)
+ZMK_COMBO(space,   &kp SPACE,       LT3 LM4,     ALL, COMBO_TERM_FAST)
 // ZMK_COMBO(esc,   HRC_ESC,       LM3 LB4,     ALL, COMBO_TERM_FAST)
 
 // ********************************************************
@@ -206,7 +206,7 @@ ZMK_COMBO(gt,   &kp GT,       RM2 RB3,     ALL, COMBO_TERM_FAST)
 // ********************************************************
 // right diagonal ring + pinky fingers
 // ********************************************************
-// ZMK_COMBO(esc,   HRC_ESC,       RT3 RM4,     ALL, COMBO_TERM_FAST)
+ZMK_COMBO(bspc,   &kp BSPC,       RT3 RM4,     ALL, COMBO_TERM_FAST)
 // ZMK_COMBO(esc,   HRC_ESC,       RM3 RB4,     ALL, COMBO_TERM_FAST)
 
 // ****************************************************************************
@@ -332,13 +332,68 @@ ZMK_COMBO(s_w, &kp LS(W), RH1 LT3, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(s_x, &kp LS(X), RH1 LB3, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(s_y, &kp LS(Y), RH1 RT3, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(s_z, &kp LS(Z), RH1 LB4, ALL, COMBO_TERM_FAST)
-
-ZMK_COMBO(s_semicolon, &kp SEMICOLON, RH1 RB2, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(s_colon, &kp COLON, RH1 RB3, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(s_excl, &kp EXCL, RH1 RB4, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(s_dqt, &kp EXCL, RH1 RT4, ALL, COMBO_TERM_FAST)
-
+ZMK_COMBO(s_enter, &kp LS(ENTER), RH1 LM1 LM2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(s_tab, &kp LS(TAB), RH1 LT2 LT3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(s_esc, &kp LS(ESC), RH1 LM2 LM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(s_space, &kp LS(SPACE), RH1 LT3 LM4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(s_bspc, &kp LS(BSPC), RH1 RT3 RM4, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(s_up, &kp LS(UP), RH1 RT2 RT3, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(s_down, &kp LS(DOWN), RH1 RM2 RM3, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(s_left, &kp LS(LEFT), RH1 RM1 RM2, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(s_right, &kp LS(RIGHT), RH1 RM3 RM4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(s_home, &kp LS(HOME), RH1 RT1 RT2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(s_end, &kp LS(END), RH1 RB1 RB2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(s_pg_up, &kp LS(PG_UP), RH1 RT4 RT3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(s_pg_dn, &kp LS(PG_DN), RH1 RB4 RB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(s_0, &kp LS(N0), RH1 RM5 LM4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(s_1, &kp LS(N1), RH1 RM5 LB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(s_2, &kp LS(N2), RH1 RM5 LB2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(s_3, &kp LS(N3), RH1 RM5 LB1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(s_4, &kp LS(N4), RH1 RM5 LM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(s_5, &kp LS(N5), RH1 RM5 LM2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(s_6, &kp LS(N6), RH1 RM5 LM1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(s_7, &kp LS(N7), RH1 RM5 LT3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(s_8, &kp LS(N8), RH1 RM5 LT2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(s_9, &kp LS(N9), RH1 RM5 LT1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(s_f1, &kp LS(F1), RH1 RB5 LB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(s_f2, &kp LS(F2), RH1 RB5 LB2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(s_f3, &kp LS(F3), RH1 RB5 LB1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(s_f4, &kp LS(F4), RH1 RB5 LM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(s_f5, &kp LS(F5), RH1 RB5 LM2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(s_f6, &kp LS(F6), RH1 RB5 LM1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(s_f7, &kp LS(F7), RH1 RB5 LT3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(s_f8, &kp LS(F8), RH1 RB5 LT2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(s_f9, &kp LS(F9), RH1 RB5 LT1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(s_f10, &kp LS(F10), RH1 RB5 LB4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(s_f11, &kp LS(F11), RH1 RB5 LM4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(s_f12, &kp LS(F12), RH1 RB5 LT4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(s_semicolon, &kp SEMICOLON, RH1 RB2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(s_colon, &kp COLON, RH1 RB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(s_excl, &kp EXCL, RH1 RB4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(s_dqt, &kp EXCL, RH1 RT4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(s_at, &kp LS(AT), RH1 LB3 LM3, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(s_hash, &kp LS(HASH), RH1 LB2 LM2, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(s_dllr, &kp LS(DLLR), RH1 LB1 LM1, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(s_prcnt, &kp LS(PRCNT), RH1 LB0 LM0, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(s_caret, &kp LS(CARET), RH1 RB0 RM0, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(s_amps, &kp LS(AMPS), RH1 RB1 RM1, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(s_star, &kp LS(STAR), RH1 RB2 RM2, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(s_tilde, &kp LS(TILDE), RH1 LM3 LT3, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(s_grave, &kp LS(GRAVE), RH1 LM2 LT2, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(s_bslh, &kp LS(BSLH), RH1 LM1 LT1, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(s_pipe, &kp LS(PIPE), RH1 LM0 LT0, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(s_under, &kp LS(UNDER), RH1 RM0 RT0, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(s_minus, &kp LS(MINUS), RH1 RM1 RT1, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(s_equal, &kp LS(EQUAL), RH1 RM2 RT2, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(s_plus, &kp LS(PLUS), RH1 RM3 RT3, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(s_slash, &kp LS(SLASH), RH1 RM0 RM1, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(s_rbrc, &kp LS(RBRC), RH1 LT2 LM1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(s_rbkt, &kp LS(RBKT), RH1 LM2 LB1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(s_lbrc, &kp LS(LBRC), RH1 LT2 LM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(s_lbkt, &kp LS(LBKT), RH1 LM2 LB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(s_lpar, &kp LS(LPAR), RH1 RT2 RM1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(s_lt, &kp LS(LT), RH1 RM2 RB1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(s_rpar, &kp LS(RPAR), RH1 RT2 RM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(s_gt, &kp LS(GT), RH1 RM2 RB3, ALL, COMBO_TERM_FAST)
+
+/* vim: set ft=c tw=174RH1 : */
