--- a/config/includes/combos.dtsi
+++ b/config/includes/combos.dtsi
@@ -367,10 +367,10 @@ ZMK_COMBO(s_f9, &kp LS(F9), RH1 RB5 LT1, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(s_f10, &kp LS(F10), RH1 RB5 LB4, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(s_f11, &kp LS(F11), RH1 RB5 LM4, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(s_f12, &kp LS(F12), RH1 RB5 LT4, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(s_semicolon, &kp SEMICOLON, RH1 RB2, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(s_colon, &kp COLON, RH1 RB3, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(s_excl, &kp EXCL, RH1 RB4, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(s_dqt, &kp EXCL, RH1 RT4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(s_semicolon, LS(&kp SEMICOLON), RH1 RB2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(s_colon, LS(&kp COLON), RH1 RB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(s_excl, LS(&kp EXCL), RH1 RB4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(s_dqt, LS(&kp EXCL), RH1 RT4, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(s_at, &kp LS(AT), RH1 LB3 LM3, ALL, COMBO_TERM_SLOW)
 ZMK_COMBO(s_hash, &kp LS(HASH), RH1 LB2 LM2, ALL, COMBO_TERM_SLOW)
 ZMK_COMBO(s_dllr, &kp LS(DLLR), RH1 LB1 LM1, ALL, COMBO_TERM_SLOW)
