add ctrl combos

--- a/config/includes/combos.dtsi
+++ b/config/includes/combos.dtsi
@@ -400,94 +400,187 @@ ZMK_COMBO(s_gt, &kp LS(GT), RH1 RM2 RB3, ALL, COMBO_TERM_FAST)
 // cmd combos
 // ****************************************************************************
 
-ZMK_COMBO(s_a, &kp LS(A), RH1 LM4, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(s_b, &kp LS(B), RH1 LT0, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(s_c, &kp LS(C), RH1 LB2, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(s_d, &kp LS(D), RH1 LB1, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(s_e, &kp LS(E), RH1 RM2, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(s_f, &kp LS(F), RH1 LT2, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(s_g, &kp LS(G), RH1 LM0, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(s_h, &kp LS(H), RH1 RB1, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(s_i, &kp LS(I), RH1 RM3, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(s_j, &kp LS(J), RH1 RT0, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(s_k, &kp LS(K), RH1 RB0, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(s_l, &kp LS(L), RH1 RT1, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(s_m, &kp LS(M), RH1 RM0, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(s_n, &kp LS(N), RH1 RM1, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(s_o, &kp LS(O), RH1 RM4, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(s_p, &kp LS(P), RH1 LT1, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(s_q, &kp LS(Q), RH1 LT4, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(s_r, &kp LS(R), RH1 LM3, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(s_s, &kp LS(S), RH1 LM2, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(s_t, &kp LS(T), RH1 LM1, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(s_u, &kp LS(U), RH1 RT2, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(s_v, &kp LS(V), RH1 LB0, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(s_w, &kp LS(W), RH1 LT3, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(s_x, &kp LS(X), RH1 LB3, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(s_y, &kp LS(Y), RH1 RT3, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(s_z, &kp LS(Z), RH1 LB4, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(s_enter, &kp LS(ENTER), RH1 LM1 LM2, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(s_tab, &kp LS(TAB), RH1 LT2 LT3, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(s_esc, &kp LS(ESC), RH1 LM2 LM3, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(s_space, &kp LS(SPACE), RH1 LT3 LM4, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(s_bspc, &kp LS(BSPC), RH1 RT3 RM4, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(s_up, &kp LS(UP), RH1 RT2 RT3, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(s_down, &kp LS(DOWN), RH1 RM2 RM3, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(s_left, &kp LS(LEFT), RH1 RM1 RM2, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(s_right, &kp LS(RIGHT), RH1 RM3 RM4, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(s_home, &kp LS(HOME), RH1 RT1 RT2, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(s_end, &kp LS(END), RH1 RB1 RB2, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(s_pg_up, &kp LS(PG_UP), RH1 RT4 RT3, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(s_pg_dn, &kp LS(PG_DN), RH1 RB4 RB3, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(s_0, &kp LS(N0), RH1 RM5 LM4, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(s_1, &kp LS(N1), RH1 RM5 LB3, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(s_2, &kp LS(N2), RH1 RM5 LB2, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(s_3, &kp LS(N3), RH1 RM5 LB1, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(s_4, &kp LS(N4), RH1 RM5 LM3, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(s_5, &kp LS(N5), RH1 RM5 LM2, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(s_6, &kp LS(N6), RH1 RM5 LM1, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(s_7, &kp LS(N7), RH1 RM5 LT3, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(s_8, &kp LS(N8), RH1 RM5 LT2, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(s_9, &kp LS(N9), RH1 RM5 LT1, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(s_f1, &kp LS(F1), RH1 RB5 LB3, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(s_f2, &kp LS(F2), RH1 RB5 LB2, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(s_f3, &kp LS(F3), RH1 RB5 LB1, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(s_f4, &kp LS(F4), RH1 RB5 LM3, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(s_f5, &kp LS(F5), RH1 RB5 LM2, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(s_f6, &kp LS(F6), RH1 RB5 LM1, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(s_f7, &kp LS(F7), RH1 RB5 LT3, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(s_f8, &kp LS(F8), RH1 RB5 LT2, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(s_f9, &kp LS(F9), RH1 RB5 LT1, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(s_f10, &kp LS(F10), RH1 RB5 LB4, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(s_f11, &kp LS(F11), RH1 RB5 LM4, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(s_f12, &kp LS(F12), RH1 RB5 LT4, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(s_semicolon, &kp LS(SEMICOLON), RH1 RB2, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(s_colon, &kp LS(COLON), RH1 RB3, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(s_excl, &kp LS(EXCL), RH1 RB4, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(s_dqt, &kp LS(EXCL), RH1 RT4, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(s_at, &kp LS(AT), RH1 LB3 LM3, ALL, COMBO_TERM_SLOW)
-ZMK_COMBO(s_hash, &kp LS(HASH), RH1 LB2 LM2, ALL, COMBO_TERM_SLOW)
-ZMK_COMBO(s_dllr, &kp LS(DLLR), RH1 LB1 LM1, ALL, COMBO_TERM_SLOW)
-ZMK_COMBO(s_prcnt, &kp LS(PRCNT), RH1 LB0 LM0, ALL, COMBO_TERM_SLOW)
-ZMK_COMBO(s_caret, &kp LS(CARET), RH1 RB0 RM0, ALL, COMBO_TERM_SLOW)
-ZMK_COMBO(s_amps, &kp LS(AMPS), RH1 RB1 RM1, ALL, COMBO_TERM_SLOW)
-ZMK_COMBO(s_star, &kp LS(STAR), RH1 RB2 RM2, ALL, COMBO_TERM_SLOW)
-ZMK_COMBO(s_tilde, &kp LS(TILDE), RH1 LM3 LT3, ALL, COMBO_TERM_SLOW)
-ZMK_COMBO(s_grave, &kp LS(GRAVE), RH1 LM2 LT2, ALL, COMBO_TERM_SLOW)
-ZMK_COMBO(s_bslh, &kp LS(BSLH), RH1 LM1 LT1, ALL, COMBO_TERM_SLOW)
-ZMK_COMBO(s_pipe, &kp LS(PIPE), RH1 LM0 LT0, ALL, COMBO_TERM_SLOW)
-ZMK_COMBO(s_under, &kp LS(UNDER), RH1 RM0 RT0, ALL, COMBO_TERM_SLOW)
-ZMK_COMBO(s_minus, &kp LS(MINUS), RH1 RM1 RT1, ALL, COMBO_TERM_SLOW)
-ZMK_COMBO(s_equal, &kp LS(EQUAL), RH1 RM2 RT2, ALL, COMBO_TERM_SLOW)
-ZMK_COMBO(s_plus, &kp LS(PLUS), RH1 RM3 RT3, ALL, COMBO_TERM_SLOW)
-ZMK_COMBO(s_slash, &kp LS(SLASH), RH1 RM0 RM1, ALL, COMBO_TERM_SLOW)
-ZMK_COMBO(s_rbrc, &kp LS(RBRC), RH1 LT2 LM1, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(s_rbkt, &kp LS(RBKT), RH1 LM2 LB1, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(s_lbrc, &kp LS(LBRC), RH1 LT2 LM3, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(s_lbkt, &kp LS(LBKT), RH1 LM2 LB3, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(s_lpar, &kp LS(LPAR), RH1 RT2 RM1, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(s_lt, &kp LS(LT), RH1 RM2 RB1, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(s_rpar, &kp LS(RPAR), RH1 RT2 RM3, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(s_gt, &kp LS(GT), RH1 RM2 RB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(g_a, &kp LG(A), LH1 LM4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(g_b, &kp LG(B), LH1 LT0, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(g_c, &kp LG(C), LH1 LB2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(g_d, &kp LG(D), LH1 LB1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(g_e, &kp LG(E), LH1 RM2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(g_f, &kp LG(F), LH1 LT2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(g_g, &kp LG(G), LH1 LM0, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(g_h, &kp LG(H), LH1 RB1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(g_i, &kp LG(I), LH1 RM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(g_j, &kp LG(J), LH1 RT0, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(g_k, &kp LG(K), LH1 RB0, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(g_l, &kp LG(L), LH1 RT1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(g_m, &kp LG(M), LH1 RM0, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(g_n, &kp LG(N), LH1 RM1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(g_o, &kp LG(O), LH1 RM4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(g_p, &kp LG(P), LH1 LT1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(g_q, &kp LG(Q), LH1 LT4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(g_r, &kp LG(R), LH1 LM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(g_s, &kp LG(S), LH1 LM2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(g_t, &kp LG(T), LH1 LM1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(g_u, &kp LG(U), LH1 RT2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(g_v, &kp LG(V), LH1 LB0, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(g_w, &kp LG(W), LH1 LT3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(g_x, &kp LG(X), LH1 LB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(g_y, &kp LG(Y), LH1 RT3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(g_z, &kp LG(Z), LH1 LB4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(g_enter, &kp LG(ENTER), LH1 LM1 LM2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(g_tab, &kp LG(TAB), LH1 LT2 LT3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(g_esc, &kp LG(ESC), LH1 LM2 LM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(g_space, &kp LG(SPACE), LH1 LT3 LM4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(g_bspc, &kp LG(BSPC), LH1 RT3 RM4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(g_up, &kp LG(UP), LH1 RT2 RT3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(g_down, &kp LG(DOWN), LH1 RM2 RM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(g_left, &kp LG(LEFT), LH1 RM1 RM2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(g_right, &kp LG(RIGHT), LH1 RM3 RM4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(g_home, &kp LG(HOME), LH1 RT1 RT2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(g_end, &kp LG(END), LH1 RB1 RB2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(g_pg_up, &kp LG(PG_UP), LH1 RT4 RT3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(g_pg_dn, &kp LG(PG_DN), LH1 RB4 RB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(g_0, &kp LG(N0), LH1 RM5 LM4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(g_1, &kp LG(N1), LH1 RM5 LB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(g_2, &kp LG(N2), LH1 RM5 LB2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(g_3, &kp LG(N3), LH1 RM5 LB1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(g_4, &kp LG(N4), LH1 RM5 LM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(g_5, &kp LG(N5), LH1 RM5 LM2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(g_6, &kp LG(N6), LH1 RM5 LM1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(g_7, &kp LG(N7), LH1 RM5 LT3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(g_8, &kp LG(N8), LH1 RM5 LT2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(g_9, &kp LG(N9), LH1 RM5 LT1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(g_f1, &kp LG(F1), LH1 RB5 LB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(g_f2, &kp LG(F2), LH1 RB5 LB2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(g_f3, &kp LG(F3), LH1 RB5 LB1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(g_f4, &kp LG(F4), LH1 RB5 LM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(g_f5, &kp LG(F5), LH1 RB5 LM2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(g_f6, &kp LG(F6), LH1 RB5 LM1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(g_f7, &kp LG(F7), LH1 RB5 LT3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(g_f8, &kp LG(F8), LH1 RB5 LT2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(g_f9, &kp LG(F9), LH1 RB5 LT1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(g_f10, &kp LG(F10), LH1 RB5 LB4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(g_f11, &kp LG(F11), LH1 RB5 LM4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(g_f12, &kp LG(F12), LH1 RB5 LT4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(g_semicolon, &kp LG(SEMICOLON), LH1 RB2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(g_colon, &kp LG(COLON), LH1 RB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(g_excl, &kp LG(EXCL), LH1 RB4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(g_dqt, &kp LG(EXCL), LH1 RT4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(g_at, &kp LG(AT), LH1 LB3 LM3, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(g_hash, &kp LG(HASH), LH1 LB2 LM2, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(g_dllr, &kp LG(DLLR), LH1 LB1 LM1, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(g_prcnt, &kp LG(PRCNT), LH1 LB0 LM0, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(g_caret, &kp LG(CARET), LH1 RB0 RM0, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(g_amps, &kp LG(AMPS), LH1 RB1 RM1, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(g_star, &kp LG(STAR), LH1 RB2 RM2, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(g_tilde, &kp LG(TILDE), LH1 LM3 LT3, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(g_grave, &kp LG(GRAVE), LH1 LM2 LT2, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(g_bslh, &kp LG(BSLH), LH1 LM1 LT1, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(g_pipe, &kp LG(PIPE), LH1 LM0 LT0, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(g_under, &kp LG(UNDER), LH1 RM0 RT0, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(g_minus, &kp LG(MINUS), LH1 RM1 RT1, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(g_equal, &kp LG(EQUAL), LH1 RM2 RT2, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(g_plus, &kp LG(PLUS), LH1 RM3 RT3, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(g_slash, &kp LG(SLASH), LH1 RM0 RM1, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(g_rbrc, &kp LG(RBRC), LH1 LT2 LM1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(g_rbkt, &kp LG(RBKT), LH1 LM2 LB1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(g_lbrc, &kp LG(LBRC), LH1 LT2 LM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(g_lbkt, &kp LG(LBKT), LH1 LM2 LB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(g_lpar, &kp LG(LPAR), LH1 RT2 RM1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(g_lt, &kp LG(LT), LH1 RM2 RB1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(g_rpar, &kp LG(RPAR), LH1 RT2 RM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(g_gt, &kp LG(GT), LH1 RM2 RB3, ALL, COMBO_TERM_FAST)
 
+// ****************************************************************************
+// ctrl combos
+// ****************************************************************************
+
+ZMK_COMBO(c_a, &kp LC(A), RH0 LM4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(c_b, &kp LC(B), RH0 LT0, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(c_c, &kp LC(C), RH0 LB2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(c_d, &kp LC(D), RH0 LB1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(c_e, &kp LC(E), RH0 RM2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(c_f, &kp LC(F), RH0 LT2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(c_g, &kp LC(G), RH0 LM0, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(c_h, &kp LC(H), RH0 RB1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(c_i, &kp LC(I), RH0 RM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(c_j, &kp LC(J), RH0 RT0, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(c_k, &kp LC(K), RH0 RB0, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(c_l, &kp LC(L), RH0 RT1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(c_m, &kp LC(M), RH0 RM0, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(c_n, &kp LC(N), RH0 RM1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(c_o, &kp LC(O), RH0 RM4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(c_p, &kp LC(P), RH0 LT1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(c_q, &kp LC(Q), RH0 LT4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(c_r, &kp LC(R), RH0 LM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(c_s, &kp LC(S), RH0 LM2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(c_t, &kp LC(T), RH0 LM1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(c_u, &kp LC(U), RH0 RT2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(c_v, &kp LC(V), RH0 LB0, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(c_w, &kp LC(W), RH0 LT3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(c_x, &kp LC(X), RH0 LB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(c_y, &kp LC(Y), RH0 RT3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(c_z, &kp LC(Z), RH0 LB4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(c_enter, &kp LC(ENTER), RH0 LM1 LM2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(c_tab, &kp LC(TAB), RH0 LT2 LT3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(c_esc, &kp LC(ESC), RH0 LM2 LM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(c_space, &kp LC(SPACE), RH0 LT3 LM4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(c_bspc, &kp LC(BSPC), RH0 RT3 RM4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(c_up, &kp LC(UP), RH0 RT2 RT3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(c_down, &kp LC(DOWN), RH0 RM2 RM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(c_left, &kp LC(LEFT), RH0 RM1 RM2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(c_right, &kp LC(RIGHT), RH0 RM3 RM4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(c_home, &kp LC(HOME), RH0 RT1 RT2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(c_end, &kp LC(END), RH0 RB1 RB2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(c_pg_up, &kp LC(PG_UP), RH0 RT4 RT3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(c_pg_dn, &kp LC(PG_DN), RH0 RB4 RB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(c_0, &kp LC(N0), RH0 RM5 LM4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(c_1, &kp LC(N1), RH0 RM5 LB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(c_2, &kp LC(N2), RH0 RM5 LB2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(c_3, &kp LC(N3), RH0 RM5 LB1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(c_4, &kp LC(N4), RH0 RM5 LM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(c_5, &kp LC(N5), RH0 RM5 LM2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(c_6, &kp LC(N6), RH0 RM5 LM1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(c_7, &kp LC(N7), RH0 RM5 LT3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(c_8, &kp LC(N8), RH0 RM5 LT2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(c_9, &kp LC(N9), RH0 RM5 LT1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(c_f1, &kp LC(F1), RH0 RB5 LB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(c_f2, &kp LC(F2), RH0 RB5 LB2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(c_f3, &kp LC(F3), RH0 RB5 LB1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(c_f4, &kp LC(F4), RH0 RB5 LM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(c_f5, &kp LC(F5), RH0 RB5 LM2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(c_f6, &kp LC(F6), RH0 RB5 LM1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(c_f7, &kp LC(F7), RH0 RB5 LT3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(c_f8, &kp LC(F8), RH0 RB5 LT2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(c_f9, &kp LC(F9), RH0 RB5 LT1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(c_f10, &kp LC(F10), RH0 RB5 LB4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(c_f11, &kp LC(F11), RH0 RB5 LM4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(c_f12, &kp LC(F12), RH0 RB5 LT4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(c_semicolon, &kp LC(SEMICOLON), RH0 RB2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(c_colon, &kp LC(COLON), RH0 RB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(c_excl, &kp LC(EXCL), RH0 RB4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(c_dqt, &kp LC(EXCL), RH0 RT4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(c_at, &kp LC(AT), RH0 LB3 LM3, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(c_hash, &kp LC(HASH), RH0 LB2 LM2, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(c_dllr, &kp LC(DLLR), RH0 LB1 LM1, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(c_prcnt, &kp LC(PRCNT), RH0 LB0 LM0, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(c_caret, &kp LC(CARET), RH0 RB0 RM0, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(c_amps, &kp LC(AMPS), RH0 RB1 RM1, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(c_star, &kp LC(STAR), RH0 RB2 RM2, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(c_tilde, &kp LC(TILDE), RH0 LM3 LT3, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(c_grave, &kp LC(GRAVE), RH0 LM2 LT2, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(c_bslh, &kp LC(BSLH), RH0 LM1 LT1, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(c_pipe, &kp LC(PIPE), RH0 LM0 LT0, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(c_under, &kp LC(UNDER), RH0 RM0 RT0, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(c_minus, &kp LC(MINUS), RH0 RM1 RT1, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(c_equal, &kp LC(EQUAL), RH0 RM2 RT2, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(c_plus, &kp LC(PLUS), RH0 RM3 RT3, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(c_slash, &kp LC(SLASH), RH0 RM0 RM1, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(c_rbrc, &kp LC(RBRC), RH0 LT2 LM1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(c_rbkt, &kp LC(RBKT), RH0 LM2 LB1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(c_lbrc, &kp LC(LBRC), RH0 LT2 LM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(c_lbkt, &kp LC(LBKT), RH0 LM2 LB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(c_lpar, &kp LC(LPAR), RH0 RT2 RM1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(c_lt, &kp LC(LT), RH0 RM2 RB1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(c_rpar, &kp LC(RPAR), RH0 RT2 RM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(c_gt, &kp LC(GT), RH0 RM2 RB3, ALL, COMBO_TERM_FAST)
 /* vim: set ft=c tw=174RH1 : */
