--- a/config/includes/combos.dtsi
+++ b/config/includes/combos.dtsi
@@ -491,6 +491,100 @@ ZMK_COMBO(g_rpar, &kp LG(RPAR), LH1 RT2 RM3, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(g_gt, &kp LG(GT), LH1 RM2 RB3, ALL, COMBO_TERM_FAST)
 
 // ****************************************************************************
+// alt combos
+// **************************************************************************aL
+
+ZMK_COMBO(a_a, &kp LC(A), RH0 LM4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(a_b, &kp LA(B), LH0 LT0, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(a_c, &kp LA(C), LH0 LB2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(a_d, &kp LA(D), LH0 LB1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(a_e, &kp LA(E), LH0 RM2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(a_f, &kp LA(F), LH0 LT2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(a_g, &kp LA(G), LH0 LM0, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(a_h, &kp LA(H), LH0 RB1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(a_i, &kp LA(I), LH0 RM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(a_j, &kp LA(J), LH0 RT0, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(a_k, &kp LA(K), LH0 RB0, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(a_l, &kp LA(L), LH0 RT1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(a_m, &kp LA(M), LH0 RM0, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(a_n, &kp LA(N), LH0 RM1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(a_o, &kp LA(O), LH0 RM4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(a_p, &kp LA(P), LH0 LT1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(a_q, &kp LA(Q), LH0 LT4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(a_r, &kp LA(R), LH0 LM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(a_s, &kp LA(S), LH0 LM2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(a_t, &kp LA(T), LH0 LM1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(a_u, &kp LA(U), LH0 RT2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(a_v, &kp LA(V), LH0 LB0, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(a_w, &kp LA(W), LH0 LT3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(a_x, &kp LA(X), LH0 LB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(a_y, &kp LA(Y), LH0 RT3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(a_z, &kp LA(Z), LH0 LB4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(a_enter, &kp LA(ENTER), LH0 LM1 LM2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(a_tab, &kp LA(TAB), LH0 LT2 LT3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(a_esc, &kp LA(ESC), LH0 LM2 LM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(a_space, &kp LA(SPACE), LH0 LT3 LM4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(a_bspc, &kp LA(BSPC), LH0 RT3 RM4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(a_up, &kp LA(UP), LH0 RT2 RT3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(a_down, &kp LA(DOWN), LH0 RM2 RM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(a_left, &kp LA(LEFT), LH0 RM1 RM2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(a_right, &kp LA(RIGHT), LH0 RM3 RM4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(a_home, &kp LA(HOME), LH0 RT1 RT2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(a_end, &kp LA(END), LH0 RB1 RB2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(a_pg_up, &kp LA(PG_UP), LH0 RT4 RT3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(a_pg_dn, &kp LA(PG_DN), LH0 RB4 RB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(a_0, &kp LA(N0), LH0 RM5 LM4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(a_1, &kp LA(N1), LH0 RM5 LB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(a_2, &kp LA(N2), LH0 RM5 LB2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(a_3, &kp LA(N3), LH0 RM5 LB1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(a_4, &kp LA(N4), LH0 RM5 LM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(a_5, &kp LA(N5), LH0 RM5 LM2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(a_6, &kp LA(N6), LH0 RM5 LM1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(a_7, &kp LA(N7), LH0 RM5 LT3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(a_8, &kp LA(N8), LH0 RM5 LT2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(a_9, &kp LA(N9), LH0 RM5 LT1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(a_f1, &kp LA(F1), LH0 RB5 LB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(a_f2, &kp LA(F2), LH0 RB5 LB2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(a_f3, &kp LA(F3), LH0 RB5 LB1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(a_f4, &kp LA(F4), LH0 RB5 LM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(a_f5, &kp LA(F5), LH0 RB5 LM2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(a_f6, &kp LA(F6), LH0 RB5 LM1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(a_f7, &kp LA(F7), LH0 RB5 LT3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(a_f8, &kp LA(F8), LH0 RB5 LT2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(a_f9, &kp LA(F9), LH0 RB5 LT1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(a_f10, &kp LA(F10), LH0 RB5 LB4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(a_f11, &kp LA(F11), LH0 RB5 LM4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(a_f12, &kp LA(F12), LH0 RB5 LT4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(a_semicolon, &kp LA(SEMICOLON), LH0 RB2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(a_colon, &kp LA(COLON), LH0 RB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(a_excl, &kp LA(EXCL), LH0 RB4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(a_dqt, &kp LA(EXCL), LH0 RT4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(a_at, &kp LA(AT), LH0 LB3 LM3, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(a_hash, &kp LA(HASH), LH0 LB2 LM2, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(a_dllr, &kp LA(DLLR), LH0 LB1 LM1, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(a_prcnt, &kp LA(PRCNT), LH0 LB0 LM0, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(a_caret, &kp LA(CARET), LH0 RB0 RM0, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(a_amps, &kp LA(AMPS), LH0 RB1 RM1, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(a_star, &kp LA(STAR), LH0 RB2 RM2, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(a_tilde, &kp LA(TILDE), LH0 LM3 LT3, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(a_grave, &kp LA(GRAVE), LH0 LM2 LT2, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(a_bslh, &kp LA(BSLH), LH0 LM1 LT1, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(a_pipe, &kp LA(PIPE), LH0 LM0 LT0, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(a_under, &kp LA(UNDER), LH0 RM0 RT0, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(a_minus, &kp LA(MINUS), LH0 RM1 RT1, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(a_equal, &kp LA(EQUAL), LH0 RM2 RT2, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(a_plus, &kp LA(PLUS), LH0 RM3 RT3, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(a_slash, &kp LA(SLASH), LH0 RM0 RM1, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(a_rbrc, &kp LA(RBRC), LH0 LT2 LM1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(a_rbkt, &kp LA(RBKT), LH0 LM2 LB1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(a_lbrc, &kp LA(LBRC), LH0 LT2 LM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(a_lbkt, &kp LA(LBKT), LH0 LM2 LB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(a_lpar, &kp LA(LPAR), LH0 RT2 RM1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(a_lt, &kp LA(LT), LH0 RM2 RB1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(a_rpar, &kp LA(RPAR), LH0 RT2 RM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(a_gt, &kp LA(GT), LH0 RM2 RB3, ALL, COMBO_TERM_FAST)
+
+// ****************************************************************************
 // ctrl combos
 // ****************************************************************************
 
