--- a/config/includes/combos.dtsi
+++ b/config/includes/combos.dtsi
@@ -677,4 +677,107 @@ ZMK_COMBO(c_lpar, &kp LC(LPAR), RH0 RT2 RM1, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(c_lt, &kp LC(LT), RH0 RM2 RB1, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(c_rpar, &kp LC(RPAR), RH0 RT2 RM3, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(c_gt, &kp LC(GT), RH0 RM2 RB3, ALL, COMBO_TERM_FAST)
+
+// ****************************************************************************
+// meh combos
+// ****************************************************************************
+
+ZMK_COMBO(meh_a, &kp LA(LS(LC(A))), LH2 LM4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(meh_b, &kp LA(LS(LC(B))), LH2 LT0, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(meh_c, &kp LA(LS(LC(C))), LH2 LB2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(meh_d, &kp LA(LS(LC(D))), LH2 LB1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(meh_e, &kp LA(LS(LC(E))), LH2 RM2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(meh_f, &kp LA(LS(LC(F))), LH2 LT2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(meh_g, &kp LA(LS(LC(G))), LH2 LM0, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(meh_h, &kp LA(LS(LC(H))), LH2 RB1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(meh_i, &kp LA(LS(LC(I))), LH2 RM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(meh_j, &kp LA(LS(LC(J))), LH2 RT0, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(meh_k, &kp LA(LS(LC(K))), LH2 RB0, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(meh_l, &kp LA(LS(LC(L))), LH2 RT1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(meh_m, &kp LA(LS(LC(M))), LH2 RM0, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(meh_n, &kp LA(LS(LC(N))), LH2 RM1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(meh_o, &kp LA(LS(LC(O))), LH2 RM4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(meh_p, &kp LA(LS(LC(P))), LH2 LT1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(meh_q, &kp LA(LS(LC(Q))), LH2 LT4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(meh_r, &kp LA(LS(LC(R))), LH2 LM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(meh_s, &kp LA(LS(LC(S))), LH2 LM2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(meh_t, &kp LA(LS(LC(T))), LH2 LM1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(meh_u, &kp LA(LS(LC(U))), LH2 RT2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(meh_v, &kp LA(LS(LC(V))), LH2 LB0, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(meh_w, &kp LA(LS(LC(W))), LH2 LT3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(meh_x, &kp LA(LS(LC(X))), LH2 LB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(meh_y, &kp LA(LS(LC(Y))), LH2 RT3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(meh_z, &kp LA(LS(LC(Z))), LH2 LB4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(meh_enter, &kp LA(LS(LC(ENTER))), LH2 LM1 LM2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(meh_tab, &kp LA(LS(LC(TAB))), LH2 LT2 LT3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(meh_esc, &kp LA(LS(LC(ESC))), LH2 LM2 LM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(meh_space, &kp LA(LS(LC(SPACE))), LH2 LT3 LM4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(meh_bspc, &kp LA(LS(LC(BSPC))), LH2 RT3 RM4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(meh_up, &kp LA(LS(LC(UP))), LH2 RT2 RT3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(meh_down, &kp LA(LS(LC(DOWN))), LH2 RM2 RM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(meh_left, &kp LA(LS(LC(LEFT))), LH2 RM1 RM2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(meh_right, &kp LA(LS(LC(RIGHT))), LH2 RM3 RM4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(meh_home, &kp LA(LS(LC(HOME))), LH2 RT1 RT2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(meh_end, &kp LA(LS(LC(END))), LH2 RB1 RB2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(meh_pg_up, &kp LA(LS(LC(PG_UP))), LH2 RT4 RT3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(meh_pg_dn, &kp LA(LS(LC(PG_DN))), LH2 RB4 RB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(meh_0, &kp LA(LS(LC(N0))), LH2 RM5 LM4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(meh_1, &kp LA(LS(LC(N1))), LH2 RM5 LB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(meh_2, &kp LA(LS(LC(N2))), LH2 RM5 LB2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(meh_3, &kp LA(LS(LC(N3))), LH2 RM5 LB1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(meh_4, &kp LA(LS(LC(N4))), LH2 RM5 LM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(meh_5, &kp LA(LS(LC(N5))), LH2 RM5 LM2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(meh_6, &kp LA(LS(LC(N6))), LH2 RM5 LM1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(meh_7, &kp LA(LS(LC(N7))), LH2 RM5 LT3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(meh_8, &kp LA(LS(LC(N8))), LH2 RM5 LT2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(meh_9, &kp LA(LS(LC(N9))), LH2 RM5 LT1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(meh_f1, &kp LA(LS(LC(F1))), LH2 RB5 LB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(meh_f2, &kp LA(LS(LC(F2))), LH2 RB5 LB2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(meh_f3, &kp LA(LS(LC(F3))), LH2 RB5 LB1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(meh_f4, &kp LA(LS(LC(F4))), LH2 RB5 LM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(meh_f5, &kp LA(LS(LC(F5))), LH2 RB5 LM2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(meh_f6, &kp LA(LS(LC(F6))), LH2 RB5 LM1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(meh_f7, &kp LA(LS(LC(F7))), LH2 RB5 LT3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(meh_f8, &kp LA(LS(LC(F8))), LH2 RB5 LT2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(meh_f9, &kp LA(LS(LC(F9))), LH2 RB5 LT1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(meh_f10, &kp LA(LS(LC(F10))), LH2 RB5 LB4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(meh_f11, &kp LA(LS(LC(F11))), LH2 RB5 LM4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(meh_f12, &kp LA(LS(LC(F12))), LH2 RB5 LT4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(meh_semicolon, &kp LA(LS(LC(SEMICOLON))), LH2 RB2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(meh_colon, &kp LA(LS(LC(COLON))), LH2 RB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(meh_excl, &kp LA(LS(LC(EXCL))), LH2 RB4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(meh_dqt, &kp LA(LS(LC(EXCL))), LH2 RT4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(meh_at, &kp LA(LS(LC(AT))), LH2 LB3 LM3, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(meh_hash, &kp LA(LS(LC(HASH))), LH2 LB2 LM2, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(meh_dllr, &kp LA(LS(LC(DLLR))), LH2 LB1 LM1, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(meh_prcnt, &kp LA(LS(LC(PRCNT))), LH2 LB0 LM0, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(meh_caret, &kp LA(LS(LC(CARET))), LH2 RB0 RM0, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(meh_amps, &kp LA(LS(LC(AMPS))), LH2 RB1 RM1, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(meh_star, &kp LA(LS(LC(STAR))), LH2 RB2 RM2, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(meh_tilde, &kp LA(LS(LC(TILDE))), LH2 LM3 LT3, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(meh_grave, &kp LA(LS(LC(GRAVE))), LH2 LM2 LT2, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(meh_bslh, &kp LA(LS(LC(BSLH))), LH2 LM1 LT1, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(meh_pipe, &kp LA(LS(LC(PIPE))), LH2 LM0 LT0, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(meh_under, &kp LA(LS(LC(UNDER))), LH2 RM0 RT0, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(meh_minus, &kp LA(LS(LC(MINUS))), LH2 RM1 RT1, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(meh_equal, &kp LA(LS(LC(EQUAL))), LH2 RM2 RT2, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(meh_plus, &kp LA(LS(LC(PLUS))), LH2 RM3 RT3, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(meh_slash, &kp LA(LS(LC(SLASH))), LH2 RM0 RM1, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(meh_rbrc, &kp LA(LS(LC(RBRC))), LH2 LT2 LM1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(meh_rbkt, &kp LA(LS(LC(RBKT))), LH2 LM2 LB1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(meh_lbrc, &kp LA(LS(LC(LBRC))), LH2 LT2 LM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(meh_lbkt, &kp LA(LS(LC(LBKT))), LH2 LM2 LB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(meh_lpar, &kp LA(LS(LC(LPAR))), LH2 RT2 RM1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(meh_lt, &kp LA(LS(LC(LT))), LH2 RM2 RB1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(meh_rpar, &kp LA(LS(LC(RPAR))), LH2 RT2 RM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(meh_gt, &kp LA(LS(LC(GT))), LH2 RM2 RB3, ALL, COMBO_TERM_FAST)
+
+
+
+
+
+
+
+
+
 /* vim: set ft=c tw=174RH1 : */
